2003-05-22  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: don't pop up an error dialog on mail check failure. Just indicate in
	the label and set the tooltip to the error message. Fixes bug #83932

2003-05-20  Muktha <muktha.narayan@wipro.com>
       * mailcheck/mailcheck.c: Prevent creation of multiple processes for
       imap configuration. Fixes bug #113351.

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  HIGify the action area of the preferences 
	dialog.  Minor tweak of padding for the spin button unit 
	labels.
	
2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Minor HIGification of preferences dialog: 
	remove separator; fix widget padding.
	
2003-04-08  Dennis Cranston <dennis_cranston at yahoo.com>

	* mailcheck.c:  HIGify the preferences dialog. Also,
	fix a few error messages.
	* help/C/mailcheck.xml:  Update for preference dialog 
	changes.

2003-04-07  Dennis Cranston <dennis_cranston at yahoo.com>

	* GNOME_MailCheckApplet.xml:  Minor HIG cleanup for
	the popup menu. Changed "Check for mail" to "_Update".  
	Moved "_Update" to top of popup menu.  Added a separator.  
	
2003-04-03  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: Fix statis variable usage so that multiple mailchecks can be used. Patch
	by Jens Zechlin. Fixes bug #109806

2003-03-27  Glynn Foster  <glynn.foster@sun.com>

	* egg-screen*: Remove - we don't need these anymore.
	* help/*: Use 'figs' instead of 'figdir' until we update
	the build system.

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* *: copy mailcheck applet over from gnome-panel and
	fixup the build.

	* help/*: copy over the help docs too.

2003-03-06  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	* mailcheck.c: Added a new error handler.
	* popcheck.[ch] (connect_socket): Retrun proper failure status
	* remote-helper.[ch]: Call the error handler on error conditions
	* solves bug #104891
