@@ -1,5 +1,10 @@
 2003-05-22  Kevin Vandersloot <kfv101@psu.edu>
 
+	* mailcheck.c: Make the update interval spins behave more sensibaly my making
+	1 sec the min. Fixes bug #86840. Also remove unused variable from last commit
+
+2003-05-22  Kevin Vandersloot <kfv101@psu.edu>
+
 	* mailcheck.c: don't pop up an error dialog on mail check failure. Just indicate in
 	the label and set the tooltip to the error message. Fixes bug #83932
 
